# pigsattack

./: .gitignore  GAME_RULES.md  README.md  balancing.md  client.py  dev_instructions.md  docker-compose.yml  package-lock.json  pyproject.toml  rulebook.txt  server.py
.devcontainer/: Dockerfile  devcontainer.json
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/app/: bot_planner.py  bot_simulation_router.py  config.py  connection_manager.py  custom_content.py  game_instance.py  game_manager.py  game_reporter.py  main.py  models.py  planner_sim.py  player_router.py  room_manager.py  routers.py  schemas.py  security.py  server_models.py
backend/app/game_core/: __init__.py  card_effects.py  deck_factory.py  game_instance.py  game_models.py  models.py
backend/app/game_core/data/: arsenal_cards.csv  threat_cards.csv  upgrade_cards.csv
backend/app/game_core/game_services/: __init__.py  action_handler.py  calculation.py  game_setup.py  phase_manager.py  validation.py
backend/pigsattack/core/: bot_controller.py  game.py  view.py
backend/pigsattack/server/: game_room.py  network_controller.py  server_view.py
backend/pigsattack/server/static/css/: style.css
backend/pigsattack/server/static/js/: app.js  handlers.js  ui.js
backend/pigsattack/server/templates/: index.html
documentation/: GAME_RULES.md  bot_balancing_tool.md  bot_planner.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
game_core/: README.md  __init__.py  data_loader.py  effects.py  models.py  session.py  threats.py  (+1 more)
(+110 files in other folders)
